--- a/src/styles/sourceboard.less
+++ b/src/styles/sourceboard.less
@@ -3,8 +3,12 @@
 
 // LESS Mixins.
 @import "node_modules/lesshat/build/lesshat.less";
+@import "mixins.less";
 
 // Now our app.
 @import "fonts.less";
 @import "icons.less";
 @import "app.less";
+
+// And responsive layout,
+@import "responsive.less";
