--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -438,7 +438,7 @@ head {
   padding: 20px 2%;
 }
 #app #header .wrap .logo {
-  background: url('/public/img/logo.png') no-repeat center;
+  background: url('../img/logo.png') no-repeat center;
   background-size: 100%;
   width: 130px;
   height: 32px;
