--- a/src/less/app.less
+++ b/src/less/app.less
@@ -56,7 +56,7 @@ html, head {
       padding: 20px 2%;
 
       .logo {
-        background: url('/public/img/logo.png') no-repeat center;
+        background: url('../img/logo.png') no-repeat center;
         background-size: 100%;
         width: 130px;
         height: 32px;
