don't use % on thead

--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -462,7 +462,7 @@ head {
   color: #FFF;
 }
 #app #header .thead .td {
-  padding: 1% 2%;
+  padding: 10px 2%;
   vertical-align: middle;
   cursor: pointer;
   -webkit-user-select: none;
