--- a/src/less/app.less
+++ b/src/less/app.less
@@ -84,7 +84,7 @@ html, head {
       color: #FFF;
 
       .td {
-        padding: 1% 2%;
+        padding: 10px 2%;
         vertical-align: middle;
         cursor: pointer;
         .user-select(none);
