--- a/src/less/app.less
+++ b/src/less/app.less
@@ -104,6 +104,11 @@ html, head {
       .box-sizing(border-box);
       color: #1D1D1D;
 
+      &:hover {
+        background: #FBEEC2;
+        cursor: pointer;
+      }
+
       .loading {
         text-align: center;
         width: 100%;
