--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -438,11 +438,19 @@ body {
   -ms-user-select: none;
   user-select: none;
   cursor: default;
+  position: relative;
 }
 @media only screen and (max-width: 480px) {
   #form {
     width: 100%;
   }
+}
+#form.loading .button {
+  height: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  background: #26ADE4;
 }
 #form .title {
   color: #FFF;
