--- a/src/less/app.less
+++ b/src/less/app.less
@@ -12,6 +12,7 @@
 @secondary: darken(@primary, 10%);
 @background: fade(darken(@primary, 20%), 70%);
 @grey: #9092A1;
+@loading: #26ADE4;
 
 @mobile: ~"only screen and (max-width: 480px)";
 
@@ -43,9 +44,20 @@ body {
   text-transform: uppercase;
   .user-select(none);
   cursor: default;
+  position: relative;
 
   @media @mobile {
     width: 100%;
+  }
+
+  &.loading {
+    .button {
+      height: 100%;
+      max-height: 100%;
+      position: absolute;
+      top: 0;
+      background: @loading;
+    }
   }
 
   .title {
