--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -427,30 +427,75 @@ body {
 #form {
   padding: 20px;
   width: 400px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   font-family: 'Abel';
   font-size: 20px;
   text-transform: uppercase;
+  cursor: default;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  cursor: default;
-  position: relative;
 }
 @media only screen and (max-width: 480px) {
   #form {
     width: 100%;
   }
 }
-#form.loading .button {
+#form.notify.ok .button {
+  background: #79BD9A;
+  -webkit-box-shadow: 0 6px #57ac80;
+  -moz-box-shadow: 0 6px #57ac80;
+  box-shadow: 0 6px #57ac80;
+}
+#form.notify.ok .button:hover {
+  -webkit-box-shadow: 0 4px #57ac80;
+  -moz-box-shadow: 0 4px #57ac80;
+  box-shadow: 0 4px #57ac80;
+}
+#form.notify.ok .button:active {
+  -webkit-box-shadow: 0 0 #57ac80;
+  -moz-box-shadow: 0 0 #57ac80;
+  box-shadow: 0 0 #57ac80;
+}
+#form.notify.fail .button {
+  background: #CC2A41;
+  -webkit-box-shadow: 0 6px #a22134;
+  -moz-box-shadow: 0 6px #a22134;
+  box-shadow: 0 6px #a22134;
+}
+#form.notify.fail .button:hover {
+  -webkit-box-shadow: 0 4px #a22134;
+  -moz-box-shadow: 0 4px #a22134;
+  box-shadow: 0 4px #a22134;
+}
+#form.notify.fail .button:active {
+  -webkit-box-shadow: 0 0 #a22134;
+  -moz-box-shadow: 0 0 #a22134;
+  box-shadow: 0 0 #a22134;
+}
+#form.notify .button {
   height: 100%;
   max-height: 100%;
   position: absolute;
   top: 0;
   background: #26ADE4;
+  -webkit-box-shadow: 0 6px #188fbf;
+  -moz-box-shadow: 0 6px #188fbf;
+  box-shadow: 0 6px #188fbf;
+}
+#form.notify .button:hover {
+  -webkit-box-shadow: 0 4px #188fbf;
+  -moz-box-shadow: 0 4px #188fbf;
+  box-shadow: 0 4px #188fbf;
+}
+#form.notify .button:active {
+  -webkit-box-shadow: 0 0 #188fbf;
+  -moz-box-shadow: 0 0 #188fbf;
+  box-shadow: 0 0 #188fbf;
 }
 #form .title {
   color: #FFF;
@@ -472,13 +517,13 @@ body {
 #form .field .input {
   width: 100%;
   padding: 10px 8px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   border: 0;
   color: #FFF;
   font-weight: bold;
   background: rgba(144, 146, 161, 0.25);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-border-radius: 4px;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 4px;
@@ -491,7 +536,6 @@ body {
 }
 #form .button {
   margin-top: 16px;
-  background: #005F6B;
   width: 100%;
   border: 0;
   color: #FFF;
@@ -500,25 +544,30 @@ body {
   text-transform: uppercase;
   position: relative;
   outline: none;
-  -webkit-box-shadow: 0 6px #003238;
-  -moz-box-shadow: 0 6px #003238;
-  box-shadow: 0 6px #003238;
   -webkit-border-radius: 4px;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 4px;
   -moz-background-clip: padding;
   border-radius: 4px;
   background-clip: padding-box;
+  background: #005F6B;
+  -webkit-box-shadow: 0 6px #003238;
+  -moz-box-shadow: 0 6px #003238;
+  box-shadow: 0 6px #003238;
 }
 #form .button:hover {
   -webkit-box-shadow: 0 4px #003238;
   -moz-box-shadow: 0 4px #003238;
   box-shadow: 0 4px #003238;
-  top: 2px;
 }
 #form .button:active {
   -webkit-box-shadow: 0 0 #003238;
   -moz-box-shadow: 0 0 #003238;
   box-shadow: 0 0 #003238;
+}
+#form .button:hover {
+  top: 2px;
+}
+#form .button:active {
   top: 6px;
 }
