--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,13 +8,32 @@
 @import "fonts.less";
 @import "icons.less";
 
+// Color definitions.
 @primary: #005F6B;
-@secondary: darken(@primary, 10%);
 @background: fade(darken(@primary, 20%), 70%);
 @grey: #9092A1;
 @loading: #26ADE4;
+@ok: #79BD9A;
+@fail: #CC2A41;
 
+// Mobile breakpoint.
 @mobile: ~"only screen and (max-width: 480px)";
+
+// Button shadow border helper.
+.button(@color) {
+  @shadow: darken(@color, 10%);
+
+  background: @color;
+  .box-shadow(0 6px @shadow);
+
+  &:hover {
+    .box-shadow(0 4px @shadow);
+  }
+
+  &:active {
+    .box-shadow(0 0 @shadow);
+  }
+}
 
 html, body {
   height: 100%;
@@ -38,25 +57,33 @@ body {
 #form {
   padding: 20px;
   width: 400px;
-  .box-sizing(border-box);
   font-family: 'Abel';
   font-size: 20px;
   text-transform: uppercase;
-  .user-select(none);
   cursor: default;
   position: relative;
+  .box-sizing(border-box);
+  .user-select(none);
 
   @media @mobile {
     width: 100%;
   }
 
-  &.loading {
+  &.notify {
+    &.ok .button {
+      .button(@ok);
+    }
+
+    &.fail .button {
+      .button(@fail);
+    }
+
     .button {
       height: 100%;
       max-height: 100%;
       position: absolute;
       top: 0;
-      background: @loading;
+      .button(@loading);
     }
   }
 
@@ -82,11 +109,11 @@ body {
     .input {
       width: 100%;
       padding: 10px 8px;
-      .box-sizing(border-box);
       border: 0;
       color: #FFF;
       font-weight: bold;
       background: fade(@grey, 25%);
+      .box-sizing(border-box);
       .border-radius(4px);
 
       &:focus {
@@ -97,7 +124,6 @@ body {
 
   .button {
     margin-top: 16px;
-    background: @primary;
     width: 100%;
     border: 0;
     color: #FFF;
@@ -106,16 +132,15 @@ body {
     text-transform: uppercase;
     position: relative;
     outline: none;
-    .box-shadow(0 6px @secondary);
+    background: @primary;
     .border-radius(4px);
+    .button(@primary);
 
     &:hover {
-      .box-shadow(0 4px @secondary);
       top: 2px;
     }
 
     &:active {
-      .box-shadow(0 0 @secondary);
       top: 6px;
     }
   }
