--- a/public/css/bundle.css
+++ b/public/css/bundle.css
@@ -392,7 +392,7 @@ body {
   height: 100%;
 }
 body {
-  background: url('../img/unsplash-1.jpg') center;
+  background: url('../img/unsplash.jpg') center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
