--- a/src/less/app.less
+++ b/src/less/app.less
@@ -39,7 +39,7 @@ html, body {
 }
 
 body {
-  background: url('../img/unsplash-1.jpg') center;
+  background: url('../img/unsplash.jpg') center;
   .background-size(cover);
 }
 
