--- a/src/less/app.less
+++ b/src/less/app.less
@@ -15,7 +15,7 @@
 @ok: #00917E;
 @fail: #A61416;
 
-// Mobile breakpoint.
+// Mobile media breakpoint.
 @mobile: ~"only screen and (max-width: 480px)";
 
 // Button shadow border helper.
