--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -62,41 +62,70 @@ $border: #e3e3e3;
       margin-bottom: 20px;
     }
 
-    .grid {
+    .books {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       justify-content: space-between;
       grid-gap: 20px;
 
-      &.table {
+      &.grid {
         .book {
-          display: grid;
-          grid-column: 1 / -1;
-          grid-template-columns: repeat(3, minmax(auto, 1fr));
-          grid-gap: 15px;
+          border-width: 1px;
+          display: flex;
+          flex-direction: column;
+          position: relative;
+          padding: 10px 5px;
 
-          > div {
-            &:not(:first-child) {
-              border-left: 1px solid $border;
-            }
+          .title {
+            flex-grow: 2;
+            padding: 5px;
+            margin-right: 20px;
           }
 
           .meta {
-            margin-top: 0;
+            padding: 2px 5px;
+
+            &.idx {
+              position: absolute;
+              top: 14px;
+              right: 5px;
+            }
+          }
+        }
+      }
+
+      &.table {
+        grid-gap: 0 20px;
+
+        .book {
+          display: grid;
+          grid-column: 1 / -1;
+          grid-template-columns: 30px repeat(3, minmax(auto, 1fr));
+          grid-gap: 15px;
+          border-width: 1px 1px 0 1px;
+
+          &:last-child {
+            border-bottom-width: 1px;
+          }
+
+          .title, .meta {
+            padding: 10px 5px;
+
+            &:not(:first-child) {
+              border-left: 1px solid $border;
+            }
           }
         }
       }
 
       .book {
-        border: 1px solid $border;
+        border-color: $border;
+        border-style: solid;
         box-sizing: border-box;
-        transition: all .15s ease;
+        transition: all .2s ease;
         cursor: pointer;
         font-size: 12px;
         color: #a9b0bc;
-        display: flex;
-        flex-direction: column;
-        position: relative;
         word-break: break-word;
 
         &:hover {
@@ -108,28 +137,17 @@ $border: #e3e3e3;
           }
         }
 
-        // &:before {
-        //   content: attr(data-idx) ".";
-        //   position: absolute;
-        //   right: 3px;
-        //   top: 7px;
-        //   background: rgba(255, 255, 255, 0.9);
-        //   padding: 5px;
-        // }
-
         .title {
           color: #000;
           font-size: 14px;
-          margin-bottom: 5px;
-          flex-grow: 2;
         }
 
         .meta {
-          margin-top: 5px;
           white-space: nowrap;
           max-width: 100ch;
           overflow: hidden;
           text-overflow: ellipsis;
+          line-height: 14px;
         }
       }
     }
